# DEPRECATED_FreeYourSoul_Server

./: .gitmodules  .travis.yml  BoostTestHelpers.cmake  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
FreeYourSoulServer/: main.cc
FreeYourSoulServer/MemoryManagement/: CharacterMemManager.cpp  CharacterMemManager.hpp  InstanceElemDODMemManager.cpp  InstanceElemDODMemManager.hpp  PlayerDODMemManager.cpp  PlayerDODMemManager.hpp  PlayersBagContentDODMemManager.cpp  PlayersBagContentDODMemManager.hpp
FreeYourSoulServer/Server/: ActionDispatcher.cpp  ActionDispatcher.hpp  Authenticator.cpp  Authenticator.hh  ServerProxy.cpp  ServerProxy.h  ServerProxy.hh  ServerProxy.hpp  ServerWorker.cpp  ServerWorker.hh  ServerWorker.hpp
FreeYourSoulServer/Server/ActionThreads/: DatabaseAction.cpp  DatabaseAction.hh  DatabaseAction.hpp  FightAction.cpp  FightAction.hh  FightAction.hpp  InventoryAction.cpp  InventoryAction.hh  InventoryAction.hpp  MapAction.cpp  MapAction.hh  MapAction.hpp
FreeYourSoulServer/Server/Logs/: Logs.cpp  Logs.hh  Logs.hpp
FreeYourSoulServer/Server/Map/: InstanceElem.cpp  InstanceElem.hpp  Map.cpp  Map.hh  Map.hpp
FreeYourSoulServer/Server/Player/: Character.cpp  Character.hh  Character.hpp  PlayerBags.cpp  PlayerBags.hh  PlayerBags.hpp  PlayerBagsContents.cpp  PlayerBagsContents.hh  PlayerBagsContents.hpp  PlayerPosition.cpp  PlayerPosition.hh  PlayerPosition.hpp  Team.cpp  Team.hh  Team.hpp
FreeYourSoulServer/Server/Player/Item/: MagicAsset.cpp  MagicAsset.hh  StatAsset.cpp  StatAsset.hh  StatAsset.hpp
FreeYourSoulServer/ServerConfig/: WorkersConfig.json
FreeYourSoulServer/Utils/: TimeTest.hh  zmqHelper.hpp
FreeYourSoulServer/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
FreeYourSoulServer/nbproject/private/: configurations.xml
FySMQ/include/: LockFreeQueue.hh
FySMQ/include/bus/: BusListener.hh  FysBus.hh  IBusListener.hh
FySMQ/include/queue/: LockFreeQueue.hh  LockingQueue.hh  QueueContainer.hh
FySMQ/resource/: test_bus_inifile.ini  test_bus_inifile_error1.ini  test_bus_inifile_error2.ini
FySMQ/ressource/: test_bus_inifile.ini  test_bus_inifile_error1.ini
FySMQ/src/: LockFreeQueue.cpp
FySMQ/test/: FysBusTest.hh  TestUnitMQ.cpp  testUnit.cpp
FySMemoryManager/include/: Chunk.hh  MasterChunk.hh
FySMemoryManager/src/: Chunk.cpp  MasterChunk.cpp
Protobuf/: CMakeLists.txt
Protobuff/: CMakeLists.txt  FySAuthenticationResponse.proto  FySGtwMessage.proto
Server/: ServerProxy.cpp  ServerProxy.hh  ServerRelay.cpp  ServerRelay.hh
Server/Actions/: ActionDispatcher.cpp  ActionDispatcher.hh  ActionForwarder.cpp  ActionForwarder.hh  AnswerForwarder.cpp  AnswerForwarder.hh
Server/include/babble/: Babble.hh  BabbleBusListener.hh  BabbleChannel.hh
Server/include/game/: FightBusListener.hh  GameBusListener.hh
Server/include/gateway/: AuthBusListener.hh  Authenticator.hh  Context.hh  ForwardListener.hh  GameServerInstance.hh  Gateway.hh  ServerMagicExtractor.hh
Server/include/network/: AnswerForwarder.hh  AuthMessage.hh  BabbleMessage.hh  HttpAuthClient.hh  Message.hh  SessionManager.hh  TcpConnection.hh
Server/include/network/http/: HttpAuthClient.hh
Server/include/network/response/: ResponseMessage.hh
Server/resource/: busconfig.ini  gateway.ini
Server/ressource/: busconfig.ini  gateway.ini
Server/src/: main.cpp
Server/src/babble/: Babble.cpp  BabbleBusListener.cpp  BabbleChannel.cpp
Server/src/game/: FightBusListener.cpp  GameBusListener.cpp
Server/src/gateway/: AuthBusListener.cpp  Authenticator.cpp  Context.cpp  ForwardListener.cpp  GameServerInstance.cpp  Gateway.cpp  ServerMagicExtractor.cpp
Server/src/network/: AnswerForwarder.cpp  AuthMessage.cpp  BabbleMessage.cpp  HttpAuthClient.cpp  Message.cpp  SessionManager.cpp  TcpConnection.cpp
Server/src/network/http/: HttpAuthClient.cpp
Server/src/network/response/: ResponseMessage.cpp
Server/test/AuthenticatorTestCases/: AuthenticatorTestCase.cpp  AuthenticatorTestCaseBadToken.cpp  CMakeLists.txt  Makefile  testAuthenticatorTestCase.cpp
Server/test/GatewayTestCases/: CMakeLists.txt  testGatewayTestCase.cpp
Server/test/mock/: FySMock.hpp  Gateway.hh  GatewayMock.cc  GatewayMock.cpp  MockData.hpp  MockVerifier.hpp  SessionManagerMock.cc  SessionManagerMock.cpp
Utils/: Helper.cpp  Helper.hh  Logger.cpp  Logger.hh
Utils/resource/: Authentication.puml  PlayerWorldServerSwitch.puml  ServerAuthentication.puml
Utils/src/: CheckVars.hh  Range.hpp  TokenGenerator.cpp  TokenGenerator.hh
Utils/test/: TestCheckVar.cpp
